# url-shortener

./: .gitignore  README.md  Rocket.toml
backend/: Cargo.toml  README.md
backend/migrations/2022-09-07-210523_create_urls/: up.sql
backend/src/: main.rs  schema.rs  services.rs
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  App.jsx  index.css
src/: db.rs  main.rs  models.rs
