[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.11"
diesel = { version = "2.0.0", features = ["sqlite", "r2d2", "serde_json"] }
diesel_migrations = "2.0.0"
dotenvy = "0.15.3"
rand = "0.8.5"
serde = "1.0.144"
serde_json = "1.0.85"
serde_derive = "1.0.144"
pear_codegen = "0.2.3"
rocket_codegen = "0.4.11"

[dependencies.rocket_contrib]
version = "0.4.11"
default-features = false
features = ["json"]
